# rust-playground-pokemon

./: Cargo.toml  README.md  pokedex.db
pokemon-api/: Cargo.toml  pokedex.db
pokemon-api/src/: api.rs  api_models.rs  lib.rs  pokedex.rs  sprite.rs  test.rs
pokemon-cli/: Cargo.toml
pokemon-cli/src/: display_image.rs  main.rs
pokemon-gui/: Cargo.toml  README.md
pokemon-gui/src/: main.rs
src/: api.rs  main.rs  pokedex.rs  pokemon.rs  window.rs
