[package]
name = "pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
image = "0.23.14"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
show-image = "0.8.4"
rustc-serialize = "0.3"
hyper = "0.14"