[package]
name = "pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.3"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
show-image = "0.12.3"
rustc-serialize = "0.3"
hyper = "0.14"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = {version = "1.0.83" }