[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
rustc-serialize = "0.3"
hyper = "0.14"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = {version = "1.0.83" }
image = "0.24.3"